[gd_scene load_steps=27 format=3 uid="uid://d2nnknw6uijxj"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_fm0sr"]
[ext_resource type="Resource" path="res://Resources/DefaultMovementData.tres" id="2_i5jei"]
[ext_resource type="Texture2D" uid="uid://dwsw6mijcu75t" path="res://Sprites/Player/Player.png" id="3_h8u1i"]
[ext_resource type="Script" path="res://Scripts/Gun.gd" id="4_7q1k4"]
[ext_resource type="AudioStream" uid="uid://b8khr8emdkj5i" path="res://Audio/jump.wav" id="4_a7cor"]
[ext_resource type="PackedScene" uid="uid://cqfuyxjay31al" path="res://Scenes/bullet.tscn" id="5_uei1t"]
[ext_resource type="AudioStream" uid="uid://bkukmjjkbkhd2" path="res://Audio/shoot.wav" id="6_o7rlh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yyivp"]
atlas = ExtResource("3_h8u1i")
region = Rect2(0, 56, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrg5x"]
atlas = ExtResource("3_h8u1i")
region = Rect2(8, 56, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_wm678"]
atlas = ExtResource("3_h8u1i")
region = Rect2(16, 56, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_52gsb"]
atlas = ExtResource("3_h8u1i")
region = Rect2(24, 56, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_lcyx5"]
atlas = ExtResource("3_h8u1i")
region = Rect2(24, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_00p12"]
atlas = ExtResource("3_h8u1i")
region = Rect2(0, 80, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vxcf"]
atlas = ExtResource("3_h8u1i")
region = Rect2(8, 80, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_14gq7"]
atlas = ExtResource("3_h8u1i")
region = Rect2(16, 80, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_uv32n"]
atlas = ExtResource("3_h8u1i")
region = Rect2(24, 80, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4prj"]
atlas = ExtResource("3_h8u1i")
region = Rect2(0, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3eod"]
atlas = ExtResource("3_h8u1i")
region = Rect2(8, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_bo2nh"]
atlas = ExtResource("3_h8u1i")
region = Rect2(16, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_1s3e1"]
atlas = ExtResource("3_h8u1i")
region = Rect2(24, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_r2702"]
atlas = ExtResource("3_h8u1i")
region = Rect2(32, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rqt1"]
atlas = ExtResource("3_h8u1i")
region = Rect2(40, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqknm"]
atlas = ExtResource("3_h8u1i")
region = Rect2(48, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_vppj2"]
atlas = ExtResource("3_h8u1i")
region = Rect2(56, 8, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_ssd72"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yyivp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrg5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wm678")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52gsb")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lcyx5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00p12")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vxcf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14gq7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uv32n")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4prj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3eod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bo2nh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1s3e1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r2702")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rqt1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqknm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vppj2")
}],
"loop": true,
"name": &"run",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4dheu"]
size = Vector2(8, 8)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 9
floor_constant_speed = true
floor_snap_length = 3.0
safe_margin = 0.1
script = ExtResource("1_fm0sr")
movement_data = ExtResource("2_i5jei")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 10
position = Vector2(0, -4)
sprite_frames = SubResource("SpriteFrames_ssd72")
animation = &"idle"
frame_progress = 0.59776

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_4dheu")

[node name="CoyoteJumpTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -32)
zoom = Vector2(5, 5)
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="JumpAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_a7cor")

[node name="Gun" type="Node2D" parent="."]
script = ExtResource("4_7q1k4")
bullet = ExtResource("5_uei1t")

[node name="FiringPoint" type="Marker2D" parent="Gun"]
position = Vector2(4, -3)

[node name="FireDelay" type="Timer" parent="Gun"]
wait_time = 0.5
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Gun"]
stream = ExtResource("6_o7rlh")

[connection signal="timeout" from="Gun/FireDelay" to="Gun" method="_on_fire_delay_timeout"]
